# opencore

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  build.rs  compose.yaml
.github/workflows/: ci.yaml
examples/calculator/: main.sh
examples/common/: event_logger.sh  functions.sh  login_admin.sh
examples/list/: main.sh  setup.sh
examples/locking/: fencing.sh  main.sh
examples/spark/: Makefile  catalog_pb2.py  catalog_pb2_grpc.py  idp_pb2.py  idp_pb2_grpc.py  main.py  main.sh  setup.sh
examples/todo/: main.sh
examples/todo-web-app/: Makefile  package.json
examples/todo-web-app/public/: index.html
examples/todo-web-app/src/: App.css  App.tsx  catalog_grpc_web_pb.d.ts  catalog_grpc_web_pb.js  catalog_pb.d.ts  catalog_pb.js  idp_grpc_web_pb.d.ts  idp_grpc_web_pb.js  idp_pb.d.ts  idp_pb.js
proto/: catalog.proto  idp.proto
src/: lib.rs  main.rs
src/managers/: email.rs  errors.rs  events.rs  groups.rs  locks.rs  mod.rs  permissions.rs  resources.rs  schemas.rs  service_accounts.rs  users.rs
src/services/: auth.rs  base.rs  errors.rs  events.rs  groups.rs  locks.rs  mod.rs  permissions.rs  resources.rs  schemas.rs  service_accounts.rs  users.rs
src/token/: claims.rs  context.rs  error.rs  mod.rs  validator.rs
