[package]
name = "opencore"
authors = ["Tino Rusch <tino.rusch@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the catalog gRPC server
name = "opencore"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
pin-project = "1"
axum = "0.4"

tonic = "0.6"
tonic-web = "0.2"
prost = "0.9"
prost-types = "0.9"
pwhash = "1"
rand = "0.8"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
sqlx-core = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version = "0.1", features = ["sync"] }
uuid = { version = "0.8", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
json-patch = "*"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
jsonschema = "0.13"
clap = {version = "3.0.0-rc.7", features = ["derive"]}
lazy_static = "1.4"
tonic-reflection = "0.3"
log = "0.4"
sea-query = { version = "^0", features = ["with-json", "with-uuid", "sqlx-postgres"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["std","fmt","env-filter"]}
tracing-opentelemetry = "0.16"
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio", "collector_client", "reqwest_collector_client"] }

[build-dependencies]
tonic-build = "0.6"