[package]
name = "opencore"
authors = ["Tino Rusch <tino.rusch@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the catalog gRPC server
name = "opencore"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
pin-project = "1"
axum = "0.5"

tonic = "0.7"
tonic-web = "0.3"
prost = "0.10"
prost-types = "0.10"
pwhash = "1"
rand = "0.8"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
sqlx-core = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version = "0.1", features = ["sync"] }
uuid = { version = "1.1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
json-patch = "*"
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
jsonschema = "0.16"
clap = {version = "3.0.0-rc.7", features = ["derive"]}
lazy_static = "1.4"
tonic-reflection = "0.4"
log = "0.4"
sea-query = { version = "^0", features = ["with-json", "with-uuid", "sqlx-postgres"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["std","fmt","env-filter"]}
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio", "collector_client", "reqwest_collector_client"] }
sp-core = "6"
hex = "0.4"
kilt-api-client = "1.6.2"
subxt = "0.21"
[build-dependencies]
tonic-build = "0.7"